--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <!-- Write your HTML in this file -->
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+  <head>
+  </head>
+  
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
