--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
 <h1>Hello, World!</h1>
+<title>I'm Mr.Meeseeks, look at me!</title>
+</head>
+<body>
+</body>
+</html>
