--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello, World!</h1>
+<!doctype>
+<html>
+
+<head>
+  <h1>Hello, World!</h1>
+  <title="First page"</title>
+    I am not sure what to put here.
+<body>
+    </html>
