--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>My LearnIDE enginE</title>
+</head>
+
+<body>
+  <h1>Hello, World!</h1>
+  <p>Programming is real fun for a lifetime</p>
+</body>
+
+</html>
