--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!-- Write your HTML in this file -->
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Well Formed Document</title>
+</head>
+
+<body>
   <h1> Hello World!
   </h1>
- 
+
+</body>
+
+</html>
