--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- Write your HTML in this file -->
+<!doctype html>
 
-  <h1> Hello, World!
-  </h1>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Well Formed Document</title>
+
+<h1> Hello, World!
+</h1>
+
+</html>
