--- a/index.html
+++ b/index.html
@@ -1,13 +1,2 @@
 <!-- Write your HTML in this file -->
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Well Formed Document</title>
-
-<h1> Hello, World!
-</h1>
-
-</html>
+<h1>Hello, World!</h1>
