--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <!-- Write your HTML in this file -->
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>  Kat's World  </title>
+
 <h1>Hello, World!</h1>
+
+</head>
+
+<body>
+</body>
+
+</html>
