--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<HTML>
+  <head>
+    <title> H1 Test </title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
+</HTML>
