--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <!-- Write your HTML in this file -->
-<h1>`Hello, World!`</h1>
+doctype! HTML
+<html>
+<head>
+</head>
+<body>
+<h1>Hello, World!</h1>
+</body>
+</html>
