--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- Write your HTML in this file -->
-doctype! HTML
+<!DOCTYPE html>
 <html>
 <head>
+  <title></title>
 </head>
 <body>
 <h1>Hello, World!</h1>
