--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!doctype html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>"First Lab"</title>
+
+<body>
+  <h1>Hello, World!</h1>
+</body>
+
+</hmtl>
