--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<h1>Hello, World!</h1>
+</head>
+<body>
+</body>
+</html>
