--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-<h1>Hello, World!</h1>  
+
+
+<!DOCTYPE html>
+<head>
+  <title>Steven's Flatiron Page</title>
+</head>
+
+<body>
+<h1>Hello, World!</h1>
+</body>
