--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>First HTML Tag Lab</title>
+</head>
+
+<body>
+  <h1>Hello, World!</h1>
+</body>
+
+</html>
