--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<html>
-  <h1>Hello, World!</h1>
+<!doctype html>
+  <html>
+    <head>
+      <body>
+        <h1>Hello, World!</h1>
+      </body>
+    </head>
 </html>
