--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello, World!</h1><!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
+<title>Title of the document</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
+</html>
